# pulseaudio

./: Makefile.am  README.md  audio.c  audio.h  configure.ac  main.c  thread-mainloop.c
